<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.View.detail.DetailStoryActivity">

    <ImageView
        android:id="@+id/iv_story_detail"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:contentDescription="@string/story"
        android:transitionName="story"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="28dp"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_story_detail"
        tools:text="@string/name" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="#CCCCCC"
        app:layout_constraintEnd_toEndOf="@+id/tv_name_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_detail" />

    <TextView
        android:id="@+id/tv_desc_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:transitionName="desc"
        app:layout_constraintEnd_toEndOf="@id/tv_name_detail"
        app:layout_constraintStart_toStartOf="@id/tv_name_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_name_detail"
        tools:text="@string/desc" />

</androidx.constraintlayout.widget.ConstraintLayout>